--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "openzeppelin-solidity": "^1.12.0",
     "truffle-contract": "^3.0.0",
     "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
