--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "openzeppelin-solidity": "^1.12.0",
     "truffle-contract": "^3.0.0",
+    "truffle-hdwallet-provider": "0.0.6",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vuex": "^3.0.1"
